static branch update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="This is a coder bloging website">
     <link rel="shortcut icon" href="img/fav.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/_global.css">
     <link rel="stylesheet" href="css/style.css">
     <!--default colour skin css file-->
     <link rel="stylesheet" href="css/skins/color-1.css">
@@ -104,7 +106,7 @@
                 </div>
                 <img src="img/post (1).jpg" alt="Code Blog">
                 <h2 class="title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                <p class='slice'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores cumque, placeat hic
+                <p class='slice'>Lorem, ipsum dolor sit amet conse ctetur adipi sicing elit. Dolores cumque, placeat hic
                     quidem molestias quas quos unde. Culpa praesentium temporibus enim omnis quis, eos nemo error,
                     neque, ea nihil architecto.</p>
                 <a href="" class="primary_btn">Read more</a>
@@ -139,7 +141,7 @@
                 </div>
                 <img src="img/post (1).jpg" alt="Code Blog">
                 <h2 class="title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                <p class='slice'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores cumque, placeat hic
+                <p class='slice'>Lorem, ipsum dolor sit amet cons ectetur adipi sicing elit. Dolores cumque, placeat hic
                     quidem molestias quas quos unde. Culpa praesentium temporibus enim omnis quis, eos nemo error,
                     neque, ea nihil architecto.</p>
                 <a href="" class="primary_btn">Read more</a>
@@ -174,7 +176,8 @@
                 </div>
                 <img src="img/post (1).jpg" alt="Code Blog">
                 <h2 class="title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                <p class='slice'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores cumque, placeat hic
+                <p class='slice'>Lorem, ipsum dolor sit amet con sec tetur adipi sicing elit. Dolores cumque, placeat
+                    hic
                     quidem molestias quas quos unde. Culpa praesentium temporibus enim omnis quis, eos nemo error,
                     neque, ea nihil architecto.</p>
                 <a href="" class="primary_btn">Read more</a>
