--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li>
                         <img class="autor-img" src="./img/avatar.png" alt="Profile"><a href="#profile">Profile</a>
                     </li>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="" class="active">Home</a></li>
                     <li><a href="#logout">Log out</a></li>
                 </ul>
                 <div class="mobile-menu">
